# vierkant

./: .gitignore  README.md  main.py  pyproject.toml  rc.py  requirements.txt  rothko.py  test_rc.py  test_rothko.py
ciphers/: rothko.py
src/: main.py
src/ciphers/: rc.py  rothko.py
src/tmpimgs/: README.md
static/: secret.css  style.css
templates/: img.html  secret.html  serve.html
tests/: test_rc.py  test_rothko.py  test_server.py
