[tool.poetry]
name = "carrothko"
version = "0.1.0"
description = "Server that encodes secrets into colorful squares"
authors = ["ukmrs <ukmrs@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
aiofiles = "^0.6.0"
multipart = "^0.2.4"
numpy = "^1.20.2"
Pillow = "^8.2.0"
uvicorn = "^0.13.4"
jinja2 = "^2.11.3"
pytest = "^6.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
